# schemaformer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  schema.json
data/: schema0.json  schema1.json  schema2.json  schema3.json
schemaformer/: json.py  schemaformer.py
