[tool.poetry]
name = "schemaformer"
version = "0.1.0"
description = "Your project description"
authors = ["Alex Litzenberger <alex@agot.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
transformers = "^4.27.4"
jsonschema = "^4.17.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
